# profitscout-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LINKEDIN_DRAFT.md  MCP_INTEGRATION_ROADMAP.md  MCP_SERVER_SPEC.md  README.md  ROADMAP.md  cloudbuild.yaml  mcp_config.json  openapi_schema.txt  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: DEPLOYMENT_GUIDE.md  MCP_AUTH.md  TESTING_GUIDE.md  TEST_PLAN.md  customer-service-policy.md
docs/archive/: delivery_summary_v1.md
docs/changelogs/: 2026-01-13-deploy-fix.md
docs/prompts/: system_prompt.md
docs/roadmap/: enhancements.md
scripts/: deploy.sh  list_models.py
scripts/debugging/: inspect_middleware.py  inspect_routes.py
src/: server.py
src/auth/: api_key_generator.py  middleware.py
src/data/: bigquery_client.py  gcs_client.py
src/tools/: business_summary.py  customer_service.py  financial_analysis.py  fundamental_analysis.py  fundamental_deep_dive.py  market_events.py  market_structure.py  news_analysis.py  performance_tracker.py  price_data_sql.py  stock_analysis.py  technical_analysis.py  top_picks_analysis.py  web_search.py  winners_dashboard.py
tests/: comprehensive_runner.py  test_new_tools.py  test_scenarios.json  verify_tools.py
tests/manual/: check_syntax.py  test_deployed_search.py  test_local_analysis.py
